--- a/XamlBrewer.Windows.MouseCommandBar/Views/MainView.xaml
+++ b/XamlBrewer.Windows.MouseCommandBar/Views/MainView.xaml
@@ -16,6 +16,7 @@
 
     <Page.Resources>
         <mvvm:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        <mvvm:EnumToVisibilityConverter x:Key="EnumToVisibilityConverter" />
     </Page.Resources>
 
     <Grid Background="White">
@@ -40,8 +41,7 @@
                Margin="20" />
 
         <!-- Main -->
-        <ListView x:Name="CheesePlate"
-                  ItemsSource="{Binding CheesePlate}"
+        <ListView ItemsSource="{Binding CheesePlate}"
                   SelectedItem="{Binding SelectedCheese, Mode=TwoWay}"
                   Margin="20"
                   HorizontalAlignment="Left"
@@ -162,7 +162,7 @@
 
         <!-- Mode Indicator -->
         <ComboBox x:Name="ModeComboBox" 
-                  SelectionChanged="ModeComboBox_SelectionChanged"
+                  SelectedItem="{Binding InputMode, Mode=TwoWay}"
                   FontSize="24"
                   Margin="0 0 20 100"
                   HorizontalAlignment="Right"
@@ -170,13 +170,13 @@
                   Grid.Row="2" />
 
         <!-- AppBar Hint -->
-        <local:CollapsedAppBar x:Name="AppBarHint" 
+        <local:CollapsedAppBar Visibility="{Binding InputMode, Converter={StaticResource EnumToVisibilityConverter}, ConverterParameter='TouchOptimized'}"
                                VerticalAlignment="Bottom"
                                Grid.RowSpan="10"
                                Grid.ColumnSpan="10" />
     </Grid>
     <Page.BottomAppBar>
-        <CommandBar x:Name="CommandBar"
+        <CommandBar Visibility="{Binding InputMode, Converter={StaticResource EnumToVisibilityConverter}, ConverterParameter='TouchOptimized'}"
                     Background="{StaticResource MightyPink}"
                     >
             <AppBarButton Label="Smell"
