Theming + ItemViewModelBase. Broke the TouchEnabled mode.

--- a/XamlBrewer.Windows.MouseCommandBar/Views/MainView.xaml
+++ b/XamlBrewer.Windows.MouseCommandBar/Views/MainView.xaml
@@ -9,7 +9,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d"
-      FontFamily="Andy">
+      FontFamily="Harrington">
 
     <Page.DataContext>
         <vm:MainViewModel />
@@ -50,7 +50,7 @@
                   >
             <ListView.Header>
                 <TextBlock Text="Cheese Pun"
-                           FontSize="48"
+                           FontSize="42"
                            Foreground="{StaticResource GeronimoTie}"
                            Margin="4" />
             </ListView.Header>
@@ -71,7 +71,7 @@
                                    Foreground="{StaticResource GeronimoFeet}"
                                    FontSize="40"
                                    Margin="10 10 10 0"
-                                   FontFamily="Andy"
+                                   FontFamily="Harrington"
                                    TextWrapping="WrapWholeWords"
                                    />
                         <StackPanel Visibility="{Binding HasPointer, Converter={StaticResource BooleanToVisibilityConverter}}"
@@ -82,7 +82,8 @@
                                     HorizontalAlignment="Right"
                                     VerticalAlignment="Top">
                             <AppBarButton Label="Smell"
-                                          Command="{Binding SmellCommand}">
+                                          Command="{Binding SmellCommand}" 
+                                          RequestedTheme="Dark">
                                 <AppBarButton.Icon>
                                     <PathIcon Height="32"
                                               Width="32"
@@ -91,7 +92,8 @@
                                 </AppBarButton.Icon>
                             </AppBarButton>
                             <AppBarButton Label="Eat"
-                                          Command="{Binding EatComand}">
+                                          Command="{Binding EatComand}" 
+                                          RequestedTheme="Dark">
                                 <AppBarButton.Icon>
                                     <PathIcon Height="32"
                                               Width="32"
@@ -103,9 +105,9 @@
                         <TextBlock Text="{Binding Description}"
                                    Grid.Row="1"
                                    Foreground="White"
-                                   FontSize="32"
+                                   FontSize="28"
                                    Margin="10"
-                                   FontFamily="Andy"
+                                   FontFamily="Harrington"
                                    TextWrapping="WrapWholeWords" />
                         <i:Interaction.Behaviors>
                             <core:EventTriggerBehavior EventName="PointerEntered">
@@ -149,7 +151,7 @@
                         </Canvas>
                     </Viewbox>
                 </Canvas>
-                <Grid Width="190"
+                <Grid Width="200"
                       Height="80">
                     <TextBlock Foreground="{StaticResource GeronimoTie}"
                                FontSize="24"
@@ -171,9 +173,9 @@
         <ComboBox x:Name="ModeComboBox"
                   Header="Mode"
                   SelectedItem="{Binding InputMode, Mode=TwoWay}"
-                  FontSize="48"
-                  FontFamily="Andy"
-                  Margin="20"
+                  FontSize="42"
+                  FontFamily="Harrington"
+                  Margin="0,20,20,0"
                   HorizontalAlignment="Right"
                   VerticalAlignment="Top"
                   Grid.Row="1" />
@@ -217,7 +219,7 @@
                         </AppBarButton>
                     </StackPanel>
                 </StackPanel>
-                <!-- Primay Command -->
+                <!-- Primary Command -->
                 <StackPanel Grid.Column="1"
                             Orientation="Vertical"
                             HorizontalAlignment="Right">
